--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
