added all the games and personal pages to them

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
@@ -41,9 +41,9 @@
 <body>
     <header>
         <div class="col1 navbar">
-            <a href="."><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
+            <a href=""><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
             <img src="img/title.png" class="title" alt="Enigma Dragons Title Image"/>
-            <a href="https://github.com/EnigmaDragons/LegendaryFrailty">
+            <a href="https://github.com/EnigmaDragons">
                 <img src="img/github.png" class="github" alt="Github Link"/>
             </a>
         </div>
@@ -51,31 +51,59 @@
 
     <div class="main">
         <div class="game-title">
-            <h2>Gnosis Disperitus</h2>
-            <p>Released 2018</p>
-        </div>
-        <div class="slider">
-            <img src="img/screenshot/Title.jpg" />
-            <img src="img/screenshot/WaterGuardian.jpg" />
-            <img src="img/screenshot/RobotRepairRoom.jpg" />
-            <img src="img/screenshot/IntroWoods.jpg" />
-            <img src="img/screenshot/Skills.jpg" />
-            <img src="img/screenshot/PowerRoomPuzzle.jpg" />
-            <img src="img/screenshot/RunForYourLife.jpg" />
+            <a href="GnosisDisperitus.html"><h2>Gnosis Disperitus</h2></a>
         </div>
 
-        <div class="releases">
-            <div class="platforms">
-                <a class="release-link" href=".">
-                    <h4><i class="fa fa-windows large-icon" aria-hidden="true"></i><br><br>Windows</h4>
-                </a>
-                <a class="release-link" href=".">
-                    <h4><i class="fa fa-apple large-icon" aria-hidden="true"></i><br><br>macOS</h4>
-                </a>
-                <a class="release-link" href=".">
-                    <h4><i class="fa fa-html5 large-icon" aria-hidden="true"></i><br><br>HTML5</h4>
-                </a>
-            </div>
+        <div class="slider">
+            <img src="img/screenshot/GnosisDisperitus/Title.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/WaterGuardian.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/RobotRepairRoom.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/IntroWoods.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/Skills.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/PowerRoomPuzzle.jpg" />
+            <img src="img/screenshot/GnosisDisperitus/RunForYourLife.jpg" />
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="game-title">
+            <a href="ModeaJetGrandResort.html"><h2>ModeaJet Grand Resort</h2></a>
+        </div>
+
+        <div class="slider">
+            <img src="img/screenshot/ModeaJetGrandResort/Title.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/MeleenaHanger.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/ScanningTravis.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/Dilemmas.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/HotelLobby.png" />
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="game-title">
+            <a href="TheShutdown.html"><h2>The Shutdown</h2></a>
+        </div>
+
+        <div class="slider">
+            <img src="img/screenshot/TheShutdown/Title.jpg" />
+            <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
+            <img src="img/screenshot/TheShutdown/MayorMistress.jpg" />
+            <img src="img/screenshot/TheShutdown/OutsideOfTown.jpg" />
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="game-title" >
+            <a href="PlanetOrDie.html"><h2>Planet Or Die</h2></a>
+        </div>
+
+        <div class="slider">
+            <img src="img/screenshot/PlanetOrDie/Title.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Intro.jpg" />
+            <img src="img/screenshot/PlanetOrDie/DefendExistence.jpg" />
+            <img src="img/screenshot/PlanetOrDie/GoodJoke.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Tomas.jpg" />
         </div>
     </div>
 
