--- a/PlanetOrDie.html
+++ b/PlanetOrDie.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
@@ -41,7 +41,7 @@
 <body>
 <header>
     <div class="col1 navbar">
-        <a href=""><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
+        <a href="."><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
         <img src="img/title.png" class="title" alt="Enigma Dragons Title Image"/>
         <a href="https://github.com/EnigmaDragons">
             <img src="img/github.png" class="github" alt="Github Link"/>
@@ -105,12 +105,11 @@
                         <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
                     </svg>
                     <br>
-                    <br>
                     Itch.io
                 </h4>
             </a>
             <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
-                <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br><br>Github</h4>
+                <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
             </a>
         </div>
     </div>
