--- a/ModeaJetGrandResort.html
+++ b/ModeaJetGrandResort.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
@@ -41,7 +41,7 @@
 <body>
 <header>
     <div class="col1 navbar">
-        <a href=""><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
+        <a href="."><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
         <img src="img/title.png" class="title" alt="Enigma Dragons Title Image"/>
         <a href="https://github.com/EnigmaDragons">
             <img src="img/github.png" class="github" alt="Github Link"/>
@@ -90,7 +90,6 @@
                         <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
                         <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
                     </svg>
-                    <br>
                     <br>
                     Itch.io
                 </h4>
