--- a/ModeaJetGrandResort.html
+++ b/ModeaJetGrandResort.html
@@ -50,34 +50,52 @@
     </header>
 
     <div class="main measure">
-        <h1>Our Games</h1>
-        <a class="game" href="GnosisDisperitus.html">
-            <div class="card">
-                <h2>Gnosis Disperitus</h2>
-                <img src="img/screenshot/GnosisDisperitus/RobotRepairRoom.jpg" />
-            </div>
-        </a>
+        <div class="game-title">
+            <h2>ModeaJet Grand Resort</h2>
+        </div>
 
-        <a class="game" href="ModeaJetGrandResort.html">
-            <div class="card">
-                <h2>ModeaJet Grand Resort</h2>
-                <img src="img/screenshot/ModeaJetGrandResort/MeleenaHanger.png" />
-            </div>
-        </a>
+        <div class="slider">
+            <img src="img/screenshot/ModeaJetGrandResort/Title.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/MeleenaHanger.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/ScanningTravis.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/Dilemmas.png" />
+            <img src="img/screenshot/ModeaJetGrandResort/HotelLobby.png" />
+        </div>
 
-        <a class="game" href="TheShutdown.html">
-            <div class="card">
-                <h2>The Shutdown</h2>
-                <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
-            </div>
-        </a>
+        <div id="description">
+            <p>The C.E.O. of the Cloning Mega Corp, Human Perfect, has been murdered at the ModeaJet Grand Resort.<br>
+                As a bioroid detective you will uncover the illegal dealings of Human Perfect.
+                You will piece together what you believe happened at the resort.
+                Along the way, you will make moral judgments and ultimately deciding who murdered Raymond Soule.
+                The game will let you make mistakes and judge the wrong people. Your choices have consequences!</p>
+        </div>
 
-        <a class="game" href="PlanetOrDie.html">
-            <div class="card">
-                <h2>Planet Or Die</h2>
-                <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
+        <div id="technologies">
+            <h3>Technologies / Frameworks / Plugins</h3>
+            <p style="margin-top: -10px">
+                Monogame
+            </p>
+        </div>
+
+        <div id="contest">
+            <h3 style="margin-top: 20px">Submission for No-Shit-Sherlock-Jam 2018</h3>
+        </div>
+
+        <div class="releases">
+            <div>
+                <a class="release-link" href="https://enigmadragons.itch.io/modeajet-grand-resort">
+                    <h4>
+                        <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
+                            <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
+                            <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
+                            <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
+                        </svg>
+                        <br>
+                        Itch.io
+                    </h4>
+                </a>
             </div>
-        </a>
+        </div>
     </div>
 
     <footer>
