--- a/PlanetOrDie.html
+++ b/PlanetOrDie.html
@@ -39,86 +39,86 @@
 </head>
 
 <body>
-<header>
-    <div class="col1 navbar">
-        <a href="."><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
-        <img src="img/title.png" class="title" alt="Enigma Dragons Title Image"/>
-        <a href="https://github.com/EnigmaDragons">
-            <img src="img/github.png" class="github" alt="Github Link"/>
-        </a>
-    </div>
-</header>
-
-<div class="main" id="main">
-    <div class="game-title">
-        <h2>Planet Or Die</h2>
-    </div>
-
-    <div class="slider">
-        <img src="img/screenshot/PlanetOrDie/Title.jpg" />
-        <img src="img/screenshot/PlanetOrDie/Intro.jpg" />
-        <img src="img/screenshot/PlanetOrDie/DefendExistence.jpg" />
-        <img src="img/screenshot/PlanetOrDie/GoodJoke.jpg" />
-        <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
-        <img src="img/screenshot/PlanetOrDie/Tomas.jpg" />
-    </div>
-
-    <div id="description">
-        <p>You are Stilles 33, the tiniest planet.
-            Scientists continually change their definitions as they refine their understand of the world.
-            Pluto used to be a planet. Eris used to be a planet. Your classification as a planet is now at risk!
-            Use powerful rhetoric and all the best logical fallacies to outwit your opponent and convince an impartial academic crowd that you are actually a planet.</p>
-    </div>
-
-    <div id="technologies">
-        <h3>Technologies / Frameworks / Plugins</h3>
-        <p style="margin-top: -10px">
-            Monogame
-        </p>
-    </div>
-
-    <div id="contest">
-        <h3 style="margin-top: 20px">Submission for Ludum Dare 38</h3>
-        <h4 style="margin-top: -15px">3rd place in Humor</h4>
-        <h4 style="margin-top: -15px">Placed in top 100 out of roughly 3000 submissions for: Fun, Innovation, Theme</h4>
-        <p style="margin-top: -10px">
-            Great game, great intro! The graphics, music and sounds and most importantly the dialogues are also pretty good.<br>
-            Excellent! Very humerous and fun game. Hats off for the idea and story… Cleanly coded with elegant graphics.<br>
-            A really fun experience. I was laughing my butt off on some of those statements. Great entry!<br>
-            Wow, after that intro I was not expecting that. I have to say I am happy with my closing statement accusing the guy of being a dark soul and then finishing with I am a fucking planet.<br>
-            This was really cool. A smacked the first guy down hard. I thought for sure I had the second guy, Calling him a jealous Pluto, but nay, I got blowed up.<br>
-            Awesome game, very funny and well written. Great art and music, very strong entry overall.<br>
-            lol, dat Ace Attorney mechanics applied to such silly(in good way) theme! Very fresh and original, and good execution too. Thank you for good laugh.<br>
-            Funniest game I’ve ever played in a Ludum Dare, hands down.<br>
-            I had a lot of fun playing this; quirky, humorous, and intriguing! I HAD to play a few times to see all the endings I could get!<br>
-            Wow! Funniest game ive played this LD XD Its so cool… I managed to beat it and it felt awsome to finally be considered a real planet :D
-        </p>
-    </div>
-
-    <div class="releases">
-        <div>
-            <a class="release-link" href="https://enigmadragons.itch.io/gnosis">
-                <h4>
-                    <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
-                        <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
-                        <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
-                        <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
-                    </svg>
-                    <br>
-                    Itch.io
-                </h4>
-            </a>
-            <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
-                <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
+    <header class="site-header">
+        <div class="measure container space-between">
+            <a href="index.html"><img class="site-logo-img" src="img/logo.png" alt="Enigma Dragons Logo"/></a>
+            <a href="index.html"><img class="site-title-img" src="img/title.png" alt="Enigma Dragons Title Image"/></a>
+            <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
+                <img class="site-github-img" src="img/github.png" alt="Github Link"/>
             </a>
         </div>
-    </div>
-</div>
+    </header>
 
-<footer>
-    <div><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Enigma Dragons</div>
-    <span class="spacer"></span>
-    <div>We make games!</div>
-</footer>
+    <div class="main measure">
+        <div class="game-title">
+            <h2>Planet Or Die</h2>
+        </div>
+
+        <div class="slider">
+            <img src="img/screenshot/PlanetOrDie/Title.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Intro.jpg" />
+            <img src="img/screenshot/PlanetOrDie/DefendExistence.jpg" />
+            <img src="img/screenshot/PlanetOrDie/GoodJoke.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
+            <img src="img/screenshot/PlanetOrDie/Tomas.jpg" />
+        </div>
+
+        <div id="description">
+            <p>You are Stilles 33, the tiniest planet.
+                Scientists continually change their definitions as they refine their understand of the world.
+                Pluto used to be a planet. Eris used to be a planet. Your classification as a planet is now at risk!
+                Use powerful rhetoric and all the best logical fallacies to outwit your opponent and convince an impartial academic crowd that you are actually a planet.</p>
+        </div>
+
+        <div id="technologies">
+            <h3>Technologies / Frameworks / Plugins</h3>
+            <p style="margin-top: -10px">
+                Monogame
+            </p>
+        </div>
+
+        <div id="contest">
+            <h3 style="margin-top: 20px">Submission for Ludum Dare 38</h3>
+            <h4 style="margin-top: -15px">3rd place in Humor</h4>
+            <h4 style="margin-top: -15px">Placed in top 100 out of roughly 3000 submissions for: Fun, Innovation, Theme</h4>
+            <p style="margin-top: -10px">
+                Great game, great intro! The graphics, music and sounds and most importantly the dialogues are also pretty good.<br>
+                Excellent! Very humerous and fun game. Hats off for the idea and story… Cleanly coded with elegant graphics.<br>
+                A really fun experience. I was laughing my butt off on some of those statements. Great entry!<br>
+                Wow, after that intro I was not expecting that. I have to say I am happy with my closing statement accusing the guy of being a dark soul and then finishing with I am a fucking planet.<br>
+                This was really cool. A smacked the first guy down hard. I thought for sure I had the second guy, Calling him a jealous Pluto, but nay, I got blowed up.<br>
+                Awesome game, very funny and well written. Great art and music, very strong entry overall.<br>
+                lol, dat Ace Attorney mechanics applied to such silly(in good way) theme! Very fresh and original, and good execution too. Thank you for good laugh.<br>
+                Funniest game I’ve ever played in a Ludum Dare, hands down.<br>
+                I had a lot of fun playing this; quirky, humorous, and intriguing! I HAD to play a few times to see all the endings I could get!<br>
+                Wow! Funniest game ive played this LD XD Its so cool… I managed to beat it and it felt awsome to finally be considered a real planet :D
+            </p>
+        </div>
+
+        <div class="releases">
+            <div>
+                <a class="release-link" href="https://enigmadragons.itch.io/gnosis">
+                    <h4>
+                        <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
+                            <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
+                            <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
+                            <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
+                        </svg>
+                        <br>
+                        Itch.io
+                    </h4>
+                </a>
+                <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
+                    <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Enigma Dragons</div>
+        <span class="spacer mobile-hidden"></span>
+        <div class="mobile-hidden">We make games!</div>
+    </footer>
 </body>
 </html>
