--- a/TheShutdown.html
+++ b/TheShutdown.html
@@ -39,77 +39,77 @@
 </head>
 
 <body>
-<header>
-    <div class="col1 navbar">
-        <a href="."><img src="img/logo.png" alt="Enigma Dragons Logo"/></a>
-        <img src="img/title.png" class="title" alt="Enigma Dragons Title Image"/>
-        <a href="https://github.com/EnigmaDragons">
-            <img src="img/github.png" class="github" alt="Github Link"/>
-        </a>
-    </div>
-</header>
-
-<div class="main" id="main">
-    <div class="game-title">
-        <h2>The Shutdown</h2>
-    </div>
-
-    <div class="slider">
-        <img src="img/screenshot/TheShutdown/Title.jpg" />
-        <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
-        <img src="img/screenshot/TheShutdown/MayorMistress.jpg" />
-        <img src="img/screenshot/TheShutdown/OutsideOfTown.jpg" />
-    </div>
-
-    <div id="description" style="margin-top: 100px">
-        <p>The Shutdown is a strategic RPG with an original soundtrack. A corrupt visionary has created a powerful drug that has radically changed the nature of humanity.
-            He has installed his own government to supply people with this drug and teaches them to use it as currency.
-            It makes people stronger, faster, and smarter, but makes them lose their minds. You must fight back against the corruption and free your countrymen!</p>
-    </div>
-
-    <div id="technologies">
-        <h3>Technologies / Frameworks / Plugins</h3>
-        <p style="margin-top: -10px">
-            RPG Maker MV<br>
-            Yanfly Engine
-        </p>
-    </div>
-
-    <div id="contest">
-        <h3 style="margin-top: 20px">Submission for Ludum Dare 39</h3>
-        <p style="margin-top: -10px">
-            Oh man, cool game! So much content, very good job guys. I like the scenario, graphics, audio. A good classic jrpg. And this is for 72 hours. Can’t say anything else, amazing.<br>
-            Graphics and sounds are great. The environment design is well done. It’s hard to believe that you guys made it in 72 hours..<br>
-            That was pretty fun! I liked the reload mechanic in the combat. The dialogue was nice too.<br>
-            Cool looking game, I like running around killing server racks in medieval houses. Was cool!<br>
-            Bugs: None found. Nicely done!
-        </p>
-    </div>
-
-    <div class="releases">
-        <div>
-            <a class="release-link" href="https://enigmadragons.itch.io/the-shutdown">
-                <h4>
-                    <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
-                        <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
-                        <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
-                        <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
-                    </svg>
-                    <br>
-                    Itch.io
-                </h4>
-            </a>
-            <a class="release-link" href="https://github.com/EnigmaDragons/TheShutdown/releases">
-                <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
+    <header class="site-header">
+        <div class="measure container space-between">
+            <a href="index.html"><img class="site-logo-img" src="img/logo.png" alt="Enigma Dragons Logo"/></a>
+            <a href="index.html"><img class="site-title-img" src="img/title.png" alt="Enigma Dragons Title Image"/></a>
+            <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
+                <img class="site-github-img" src="img/github.png" alt="Github Link"/>
             </a>
         </div>
-    </div>
-</div>
+    </header>
 
-<footer>
-    <div><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Enigma Dragons</div>
-    <span class="spacer"></span>
-    <div>We make games!</div>
-</footer>
+    <div class="main measure">
+        <div class="game-title">
+            <h2>The Shutdown</h2>
+        </div>
+
+        <div class="slider">
+            <img src="img/screenshot/TheShutdown/Title.jpg" />
+            <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
+            <img src="img/screenshot/TheShutdown/MayorMistress.jpg" />
+            <img src="img/screenshot/TheShutdown/OutsideOfTown.jpg" />
+        </div>
+
+        <div id="description" style="margin-top: 100px">
+            <p>The Shutdown is a strategic RPG with an original soundtrack. A corrupt visionary has created a powerful drug that has radically changed the nature of humanity.
+                He has installed his own government to supply people with this drug and teaches them to use it as currency.
+                It makes people stronger, faster, and smarter, but makes them lose their minds. You must fight back against the corruption and free your countrymen!</p>
+        </div>
+
+        <div id="technologies">
+            <h3>Technologies / Frameworks / Plugins</h3>
+            <p style="margin-top: -10px">
+                RPG Maker MV<br>
+                Yanfly Engine
+            </p>
+        </div>
+
+        <div id="contest">
+            <h3 style="margin-top: 20px">Submission for Ludum Dare 39</h3>
+            <p style="margin-top: -10px">
+                Oh man, cool game! So much content, very good job guys. I like the scenario, graphics, audio. A good classic jrpg. And this is for 72 hours. Can’t say anything else, amazing.<br>
+                Graphics and sounds are great. The environment design is well done. It’s hard to believe that you guys made it in 72 hours..<br>
+                That was pretty fun! I liked the reload mechanic in the combat. The dialogue was nice too.<br>
+                Cool looking game, I like running around killing server racks in medieval houses. Was cool!<br>
+                Bugs: None found. Nicely done!
+            </p>
+        </div>
+
+        <div class="releases">
+            <div>
+                <a class="release-link" href="https://enigmadragons.itch.io/the-shutdown">
+                    <h4>
+                        <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
+                            <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
+                            <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
+                            <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
+                        </svg>
+                        <br>
+                        Itch.io
+                    </h4>
+                </a>
+                <a class="release-link" href="https://github.com/EnigmaDragons/TheShutdown/releases">
+                    <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Enigma Dragons</div>
+        <span class="spacer mobile-hidden"></span>
+        <div class="mobile-hidden">We make games!</div>
+    </footer>
 </body>
 </html>
