--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
 
     <div class="main measure">
         <h1>Our Games</h1>
-        <a class="game" href="GnosisDisperitus.html">
+        <a class="game" href="games/GnosisDisperitus.html">
             <div class="card">
                 <h2>Gnosis Disperitus</h2>
                 <img src="img/screenshot/GnosisDisperitus/RobotRepairRoom.jpg" />
             </div>
         </a>
 
-        <a class="game" href="ModeaJetGrandResort.html">
+        <a class="game" href="games/ModeaJetGrandResort.html">
             <div class="card">
                 <h2>ModeaJet Grand Resort</h2>
                 <img src="img/screenshot/ModeaJetGrandResort/MeleenaHanger.png" />
             </div>
         </a>
 
-        <a class="game" href="TheShutdown.html">
+        <a class="game" href="games/TheShutdown.html">
             <div class="card">
                 <h2>The Shutdown</h2>
                 <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
             </div>
         </a>
 
-        <a class="game" href="PlanetOrDie.html">
+        <a class="game" href="games/PlanetOrDie.html">
             <div class="card">
                 <h2>Planet Or Die</h2>
                 <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
