--- a/games/ModeaJetGrandResort.html
+++ b/games/ModeaJetGrandResort.html
@@ -10,12 +10,12 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica|Open+Sans" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="css/sss.css" type="text/css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <link rel="stylesheet" href="/css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="js/sss.min.js"></script>
+    <script src="/js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
     <!-- Icon -->
@@ -41,8 +41,8 @@
 <body>
     <header class="site-header">
         <div class="measure container space-between">
-            <a href="index.html"><img class="site-logo-img" src="img/logo.png" alt="Enigma Dragons Logo"/></a>
-            <a href="index.html"><img class="site-title-img" src="img/title.png" alt="Enigma Dragons Title Image"/></a>
+            <a href="/index.html"><img class="site-logo-img" src="/img/logo.png" alt="Enigma Dragons Logo"/></a>
+            <a href="/index.html"><img class="site-title-img" src="/img/title.png" alt="Enigma Dragons Title Image"/></a>
             <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
                 <img class="site-github-img" src="img/github.png" alt="Github Link"/>
             </a>
@@ -51,23 +51,23 @@
 
     <div class="main measure">
         <div class="game-title">
-            <h2>Planet Or Die</h2>
+            <h2>ModeaJet Grand Resort</h2>
         </div>
 
         <div class="slider">
-            <img src="img/screenshot/PlanetOrDie/Title.jpg" />
-            <img src="img/screenshot/PlanetOrDie/Intro.jpg" />
-            <img src="img/screenshot/PlanetOrDie/DefendExistence.jpg" />
-            <img src="img/screenshot/PlanetOrDie/GoodJoke.jpg" />
-            <img src="img/screenshot/PlanetOrDie/Burn.jpg" />
-            <img src="img/screenshot/PlanetOrDie/Tomas.jpg" />
+            <img src="/img/screenshot/ModeaJetGrandResort/Title.png" />
+            <img src="/img/screenshot/ModeaJetGrandResort/MeleenaHanger.png" />
+            <img src="/img/screenshot/ModeaJetGrandResort/ScanningTravis.png" />
+            <img src="/img/screenshot/ModeaJetGrandResort/Dilemmas.png" />
+            <img src="/img/screenshot/ModeaJetGrandResort/HotelLobby.png" />
         </div>
 
         <div id="description">
-            <p>You are Stilles 33, the tiniest planet.
-                Scientists continually change their definitions as they refine their understand of the world.
-                Pluto used to be a planet. Eris used to be a planet. Your classification as a planet is now at risk!
-                Use powerful rhetoric and all the best logical fallacies to outwit your opponent and convince an impartial academic crowd that you are actually a planet.</p>
+            <p>The C.E.O. of the Cloning Mega Corp, Human Perfect, has been murdered at the ModeaJet Grand Resort.<br>
+                As a bioroid detective you will uncover the illegal dealings of Human Perfect.
+                You will piece together what you believe happened at the resort.
+                Along the way, you will make moral judgments and ultimately deciding who murdered Raymond Soule.
+                The game will let you make mistakes and judge the wrong people. Your choices have consequences!</p>
         </div>
 
         <div id="technologies">
@@ -78,26 +78,12 @@
         </div>
 
         <div id="contest">
-            <h3 style="margin-top: 20px">Submission for Ludum Dare 38</h3>
-            <h4 style="margin-top: -15px">3rd place in Humor</h4>
-            <h4 style="margin-top: -15px">Placed in top 100 out of roughly 3000 submissions for: Fun, Innovation, Theme</h4>
-            <p style="margin-top: -10px">
-                Great game, great intro! The graphics, music and sounds and most importantly the dialogues are also pretty good.<br>
-                Excellent! Very humerous and fun game. Hats off for the idea and story… Cleanly coded with elegant graphics.<br>
-                A really fun experience. I was laughing my butt off on some of those statements. Great entry!<br>
-                Wow, after that intro I was not expecting that. I have to say I am happy with my closing statement accusing the guy of being a dark soul and then finishing with I am a fucking planet.<br>
-                This was really cool. A smacked the first guy down hard. I thought for sure I had the second guy, Calling him a jealous Pluto, but nay, I got blowed up.<br>
-                Awesome game, very funny and well written. Great art and music, very strong entry overall.<br>
-                lol, dat Ace Attorney mechanics applied to such silly(in good way) theme! Very fresh and original, and good execution too. Thank you for good laugh.<br>
-                Funniest game I’ve ever played in a Ludum Dare, hands down.<br>
-                I had a lot of fun playing this; quirky, humorous, and intriguing! I HAD to play a few times to see all the endings I could get!<br>
-                Wow! Funniest game ive played this LD XD Its so cool… I managed to beat it and it felt awsome to finally be considered a real planet :D
-            </p>
+            <h3 style="margin-top: 20px">Submission for No-Shit-Sherlock-Jam 2018</h3>
         </div>
 
         <div class="releases">
             <div>
-                <a class="release-link" href="https://enigmadragons.itch.io/gnosis">
+                <a class="release-link" href="https://enigmadragons.itch.io/modeajet-grand-resort">
                     <h4>
                         <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
                             <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
@@ -107,9 +93,6 @@
                         <br>
                         Itch.io
                     </h4>
-                </a>
-                <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
-                    <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
                 </a>
             </div>
         </div>
