--- a/games/TheShutdown.html
+++ b/games/TheShutdown.html
@@ -10,12 +10,12 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica|Open+Sans" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="css/sss.css" type="text/css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
+    <link rel="stylesheet" href="/css/sss.css" type="text/css">
 
     <!-- Image Carousel -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="js/sss.min.js"></script>
+    <script src="/js/sss.min.js"></script>
     <script>jQuery(function($) {$('.slider').sss();});</script>
 
     <!-- Icon -->
@@ -41,10 +41,10 @@
 <body>
     <header class="site-header">
         <div class="measure container space-between">
-            <a href="index.html"><img class="site-logo-img" src="img/logo.png" alt="Enigma Dragons Logo"/></a>
-            <a href="index.html"><img class="site-title-img" src="img/title.png" alt="Enigma Dragons Title Image"/></a>
+            <a href="/index.html"><img class="site-logo-img" src="/img/logo.png" alt="Enigma Dragons Logo"/></a>
+            <a href="/index.html"><img class="site-title-img" src="/img/title.png" alt="Enigma Dragons Title Image"/></a>
             <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
-                <img class="site-github-img" src="img/github.png" alt="Github Link"/>
+                <img class="site-github-img" src="/img/github.png" alt="Github Link"/>
             </a>
         </div>
     </header>
@@ -55,10 +55,10 @@
         </div>
 
         <div class="slider">
-            <img src="img/screenshot/TheShutdown/Title.jpg" />
-            <img src="img/screenshot/TheShutdown/DarkTownHall.jpg" />
-            <img src="img/screenshot/TheShutdown/MayorMistress.jpg" />
-            <img src="img/screenshot/TheShutdown/OutsideOfTown.jpg" />
+            <img src="/img/screenshot/TheShutdown/Title.jpg" />
+            <img src="/img/screenshot/TheShutdown/DarkTownHall.jpg" />
+            <img src="/img/screenshot/TheShutdown/MayorMistress.jpg" />
+            <img src="/img/screenshot/TheShutdown/OutsideOfTown.jpg" />
         </div>
 
         <div id="description" style="margin-top: 100px">
