Corrected Last Commit

--- a/games/ModeaJetGrandResort.html
+++ b/games/ModeaJetGrandResort.html
@@ -44,7 +44,7 @@
             <a href="/index.html"><img class="site-logo-img" src="/img/logo.png" alt="Enigma Dragons Logo"/></a>
             <a href="/index.html"><img class="site-title-img" src="/img/title.png" alt="Enigma Dragons Title Image"/></a>
             <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
-                <img class="site-github-img" src="img/github.png" alt="Github Link"/>
+                <img class="site-github-img" src="/img/github.png" alt="Github Link"/>
             </a>
         </div>
     </header>
