--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@ layout: default
 ---
 <div class="main measure">
     <h1>Our Games</h1>
+    <a class="game" href="games/ZeroFootprintSociety">
+        <div class="card">
+            <h2>Zero-Footprint Society</h2>
+            <img src="img/screenshot/ZeroFootprintSociety/dark-alley-1.jpg"/>
+        </div>
+    </a>
+
     <a class="game" href="games/GnosisDisperitus">
         <div class="card">
             <h2>Gnosis Disperitus</h2>
