Added our two most recent games

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@ layout: default
 ---
 <div class="main measure">
     <h1>Our Games</h1>
+
+    <a class="game" href="games/BlackMarketCrackdown">
+        <div class="card">
+            <h2>Black Market Crackdown</h2>
+            <img src="img/screenshot/BlackMarketCrackdown/Cruising.jpg"/>
+        </div>
+    </a>
+
+    <a class="game" href="games/BedDeadRedemption">
+        <div class="card">
+            <h2>Black Market Crackdown</h2>
+            <img src="img/screenshot/BedDeadRedemption/title.jpg"/>
+        </div>
+    </a>
+
     <a class="game" href="games/ZeroFootprintSociety">
         <div class="card">
             <h2>Zero-Footprint Society</h2>
