--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 
     <a class="game" href="games/BedDeadRedemption">
         <div class="card">
-            <h2>Black Market Crackdown</h2>
+            <h2>Bed Dead Redemption</h2>
             <img src="img/screenshot/BedDeadRedemption/title.jpg"/>
         </div>
     </a>
