Added YouGottaBeKittenMe and Rates policy page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@ layout: default
 <div class="main measure">
     <h1>Our Games</h1>
 
+    <a class="game" href="games/YouGottaBeKittenMe">
+        <div class="card">
+            <h2>You Gotta Be Kitten Me</h2>
+            <img src="img/screenshot/YouGottaBeKittenMe/lab.jpg"/>
+        </div>
+    </a>
+
     <a class="game" href="games/BlackMarketCrackdown">
         <div class="card">
             <h2>Black Market Crackdown</h2>
